<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="pre_o_por_litro">Preço por Litro</string>
    <string name="pre_o">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">Seu gasto Total será de:</string>
    <string name="Valor_total">R$: 0</string>
    <string name="calcular">CALCULAR</string>

    <string name="Validation_fill_all_fields">"Preencha todoas os campos."</string>

</resources>